--- a/base64encoder/pom.xml
+++ b/base64encoder/pom.xml
@@ -7,7 +7,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<artifactId>parent-pom</artifactId>
 		<groupId>apigee</groupId>
 		<version>1.0</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../shared-pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>apigee</groupId>
